fix #70 :stuck_out_tongue: :stuck_out_tongue: :stuck_out_tongue:

--- a/GroomRoom/GroomRoom/assets/css/main.css
+++ b/GroomRoom/GroomRoom/assets/css/main.css
@@ -109,6 +109,11 @@ header i
 
 }
 
+.message_pic
+{
+    width:150px;
+}
+
 #popup
 {
     font-family:GothamLight;
